--- a/index.css
+++ b/index.css
@@ -93,6 +93,11 @@ p {
     margin-top: 7rem;
   }
 
+  .container {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
   .attribution {
     font-size: 11.5px;
   }
