--- a/index.css
+++ b/index.css
@@ -98,6 +98,10 @@ p {
     padding-bottom: 30px;
   }
 
+  .author {
+    margin-bottom: -5px;
+  }
+
   .attribution {
     font-size: 11.5px;
   }
